// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for ProjectForm component. Should render ProjectForm component for Organization and Product owner with read-only input for Organization and select for Product. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="flex flex-col"
  >
    <div
      class="hidden lg:block px-8"
    >
      <div
        class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="inline text-dial-blue h5"
          href="/"
        >
          Home
        </a>
        <div
          class="inline h5"
        >
           &gt; 
          <a
            class="text-dial-gray-dark"
            href="/"
          />
        </div>
      </div>
    </div>
    <div
      class="pb-8 px-8"
    >
      <div
        class="sm:px-0 max-w-full mx-auto"
        id="content"
      >
        <form>
          <div
            class="bg-edit shadow-md rounded px-8 pt-6 pb-12 mb-4 flex flex-col gap-3"
          >
            <div
              class="text-2xl font-bold text-dial-blue pb-4"
            >
              Create New Project
            </div>
            <div
              class="flex flex-col lg:flex-row gap-4"
            >
              <div
                class="w-full lg:w-1/2 flex flex-col gap-y-3"
              >
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="project-name"
                >
                  <label
                    class="text-xl text-dial-blue required-field"
                    for="name"
                  >
                    Name
                  </label>
                  <input
                    class="validation-error w-full"
                    id="name"
                    name="name"
                    placeholder="Name"
                    type="text"
                    value=""
                  />
                  <p
                    class="text-sm text-validation-error"
                  >
                    This field is required
                  </p>
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                >
                  <label
                    class="text-xl text-dial-blue"
                  >
                    Start Date
                  </label>
                  <input
                    class="w-full"
                    name="startDate"
                    placeholder="Start Date"
                    type="date"
                    value=""
                  />
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                >
                  <label
                    class="text-xl text-dial-blue"
                  >
                    End Date
                  </label>
                  <input
                    class="w-full"
                    name="endDate"
                    placeholder="End Date"
                    type="date"
                    value=""
                  />
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                >
                  <label
                    class="text-xl text-dial-blue"
                  >
                    Project URL
                  </label>
                  <input
                    class="w-full"
                    name="projectUrl"
                    placeholder="Project URL"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="project-product"
                >
                  <label
                    class="required-field text-xl text-dial-blue"
                  >
                    Product
                  </label>
                  <div
                    class=" css-l45kjq-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-5-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="react-select__control css-19jej77-control"
                    >
                      <div
                        class="react-select__value-container react-select__value-container--has-value css-3tzzl5-ValueContainer"
                      >
                        <div
                          class="react-select__single-value css-qc6sy-singleValue"
                        >
                          Product 1
                        </div>
                        <div
                          class="react-select__input-container css-6j8wv5-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="react-select__input"
                            id="react-select-5-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 0; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-1979yuk-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-1hmmjq6-indicatorContainer"
                        >
                          <svg
                            class="text-2xl"
                            fill="none"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <input
                      name="product"
                      type="hidden"
                      value="1"
                    />
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="project-organization"
                >
                  <label
                    class="text-xl text-dial-blue"
                  >
                    Organization
                  </label>
                  <input
                    class="w-full"
                    disabled=""
                    placeholder="Organization"
                    type="text"
                    value="owned organization"
                  />
                </div>
              </div>
              <div
                class="w-full lg:w-1/2"
              >
                <div
                  class="block flex flex-col gap-y-2"
                  data-testid="project-description"
                >
                  <label
                    class="text-xl text-dial-blue required-field"
                  >
                    Description
                  </label>
                  <div
                    class="validation-error htmlEditor"
                  >
                    <textarea
                      id="description-editor"
                      style="visibility: hidden;"
                    />
                  </div>
                  <p
                    class="text-sm text-validation-error"
                  >
                    This field is required
                  </p>
                </div>
              </div>
            </div>
            <div
              class="flex flex-wrap text-xl mt-8 gap-3"
            >
              <button
                class="submit-button"
                data-testid="submit-button"
                type="submit"
              >
                Submit Project
              </button>
              <button
                class="cancel-button"
                type="button"
              >
                Cancel
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for ProjectForm component. Should render ProjectForm component for Organization owner with read-only input for Organization and no select for Product. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="flex flex-col"
  >
    <div
      class="hidden lg:block px-8"
    >
      <div
        class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="inline text-dial-blue h5"
          href="/"
        >
          Home
        </a>
        <div
          class="inline h5"
        >
           &gt; 
          <a
            class="text-dial-gray-dark"
            href="/"
          />
        </div>
      </div>
    </div>
    <div
      class="pb-8 px-8"
    >
      <div
        class="sm:px-0 max-w-full mx-auto"
        id="content"
      >
        <form>
          <div
            class="bg-edit shadow-md rounded px-8 pt-6 pb-12 mb-4 flex flex-col gap-3"
          >
            <div
              class="text-2xl font-bold text-dial-blue pb-4"
            >
              Create New Project
            </div>
            <div
              class="flex flex-col lg:flex-row gap-4"
            >
              <div
                class="w-full lg:w-1/2 flex flex-col gap-y-3"
              >
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="project-name"
                >
                  <label
                    class="text-xl text-dial-blue required-field"
                    for="name"
                  >
                    Name
                  </label>
                  <input
                    class="w-full"
                    id="name"
                    name="name"
                    placeholder="Name"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                >
                  <label
                    class="text-xl text-dial-blue"
                  >
                    Start Date
                  </label>
                  <input
                    class="w-full"
                    name="startDate"
                    placeholder="Start Date"
                    type="date"
                    value=""
                  />
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                >
                  <label
                    class="text-xl text-dial-blue"
                  >
                    End Date
                  </label>
                  <input
                    class="w-full"
                    name="endDate"
                    placeholder="End Date"
                    type="date"
                    value=""
                  />
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                >
                  <label
                    class="text-xl text-dial-blue"
                  >
                    Project URL
                  </label>
                  <input
                    class="w-full"
                    name="projectUrl"
                    placeholder="Project URL"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="project-organization"
                >
                  <label
                    class="text-xl text-dial-blue"
                  >
                    Organization
                  </label>
                  <input
                    class="w-full"
                    disabled=""
                    placeholder="Organization"
                    type="text"
                    value="owned organization"
                  />
                </div>
              </div>
              <div
                class="w-full lg:w-1/2"
              >
                <div
                  class="block flex flex-col gap-y-2"
                  data-testid="project-description"
                >
                  <label
                    class="text-xl text-dial-blue required-field"
                  >
                    Description
                  </label>
                  <div
                    class="htmlEditor"
                  >
                    <textarea
                      id="description-editor"
                      style="visibility: hidden;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex flex-wrap text-xl mt-8 gap-3"
            >
              <button
                class="submit-button"
                data-testid="submit-button"
                type="submit"
              >
                Submit Project
              </button>
              <button
                class="cancel-button"
                type="button"
              >
                Cancel
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for ProjectForm component. Should render ProjectForm component for Product owner with select for Product and no select for Organization. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="flex flex-col"
  >
    <div
      class="hidden lg:block px-8"
    >
      <div
        class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="inline text-dial-blue h5"
          href="/"
        >
          Home
        </a>
        <div
          class="inline h5"
        >
           &gt; 
          <a
            class="text-dial-gray-dark"
            href="/"
          />
        </div>
      </div>
    </div>
    <div
      class="pb-8 px-8"
    >
      <div
        class="sm:px-0 max-w-full mx-auto"
        id="content"
      >
        <form>
          <div
            class="bg-edit shadow-md rounded px-8 pt-6 pb-12 mb-4 flex flex-col gap-3"
          >
            <div
              class="text-2xl font-bold text-dial-blue pb-4"
            >
              Create New Project
            </div>
            <div
              class="flex flex-col lg:flex-row gap-4"
            >
              <div
                class="w-full lg:w-1/2 flex flex-col gap-y-3"
              >
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="project-name"
                >
                  <label
                    class="text-xl text-dial-blue required-field"
                    for="name"
                  >
                    Name
                  </label>
                  <input
                    class="w-full"
                    id="name"
                    name="name"
                    placeholder="Name"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                >
                  <label
                    class="text-xl text-dial-blue"
                  >
                    Start Date
                  </label>
                  <input
                    class="w-full"
                    name="startDate"
                    placeholder="Start Date"
                    type="date"
                    value=""
                  />
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                >
                  <label
                    class="text-xl text-dial-blue"
                  >
                    End Date
                  </label>
                  <input
                    class="w-full"
                    name="endDate"
                    placeholder="End Date"
                    type="date"
                    value=""
                  />
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                >
                  <label
                    class="text-xl text-dial-blue"
                  >
                    Project URL
                  </label>
                  <input
                    class="w-full"
                    name="projectUrl"
                    placeholder="Project URL"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="project-product"
                >
                  <label
                    class="required-field text-xl text-dial-blue"
                  >
                    Product
                  </label>
                  <div
                    class=" css-l45kjq-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-4-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="react-select__control react-select__control--menu-is-open css-19jej77-control"
                    >
                      <div
                        class="react-select__value-container css-3tzzl5-ValueContainer"
                      >
                        <div
                          class="react-select__placeholder css-19jynah-placeholder"
                          id="react-select-4-placeholder"
                        >
                          Product
                        </div>
                        <div
                          class="react-select__input-container css-6j8wv5-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="react-select-4-listbox"
                            aria-describedby="react-select-4-placeholder"
                            aria-expanded="true"
                            aria-haspopup="true"
                            aria-owns="react-select-4-listbox"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="react-select__input"
                            id="react-select-4-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-1979yuk-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-1hmmjq6-indicatorContainer"
                        >
                          <svg
                            class="text-2xl"
                            fill="none"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="react-select__menu css-1jtw5r9-menu"
                      id="react-select-4-listbox"
                    >
                      <div
                        class="react-select__menu-list css-4ljt47-MenuList"
                      >
                        <div
                          aria-disabled="false"
                          class="react-select__option react-select__option--is-focused css-llk42x-option"
                          id="react-select-4-option-0"
                          tabindex="-1"
                        >
                          Product 1
                        </div>
                        <div
                          aria-disabled="false"
                          class="react-select__option css-19r0ri3-option"
                          id="react-select-4-option-1"
                          tabindex="-1"
                        >
                          Product 2
                        </div>
                      </div>
                    </div>
                    <input
                      name="product"
                      type="hidden"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="w-full lg:w-1/2"
              >
                <div
                  class="block flex flex-col gap-y-2"
                  data-testid="project-description"
                >
                  <label
                    class="text-xl text-dial-blue required-field"
                  >
                    Description
                  </label>
                  <div
                    class="htmlEditor"
                  >
                    <textarea
                      id="description-editor"
                      style="visibility: hidden;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex flex-wrap text-xl mt-8 gap-3"
            >
              <button
                class="submit-button"
                data-testid="submit-button"
                type="submit"
              >
                Submit Project
              </button>
              <button
                class="cancel-button"
                type="button"
              >
                Cancel
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for ProjectForm component. Should render ProjectForm component for admin user. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="flex flex-col"
  >
    <div
      class="hidden lg:block px-8"
    >
      <div
        class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="inline text-dial-blue h5"
          href="/"
        >
          Home
        </a>
        <div
          class="inline h5"
        >
           &gt; 
          <a
            class="text-dial-gray-dark"
            href="/"
          />
        </div>
      </div>
    </div>
    <div
      class="pb-8 px-8"
    >
      <div
        class="sm:px-0 max-w-full mx-auto"
        id="content"
      >
        <form>
          <div
            class="bg-edit shadow-md rounded px-8 pt-6 pb-12 mb-4 flex flex-col gap-3"
          >
            <div
              class="text-2xl font-bold text-dial-blue pb-4"
            >
              Create New Project
            </div>
            <div
              class="flex flex-col lg:flex-row gap-4"
            >
              <div
                class="w-full lg:w-1/2 flex flex-col gap-y-3"
              >
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="project-name"
                >
                  <label
                    class="text-xl text-dial-blue required-field"
                    for="name"
                  >
                    Name
                  </label>
                  <input
                    class="w-full"
                    id="name"
                    name="name"
                    placeholder="Name"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                >
                  <label
                    class="text-xl text-dial-blue"
                  >
                    Start Date
                  </label>
                  <input
                    class="w-full"
                    name="startDate"
                    placeholder="Start Date"
                    type="date"
                    value=""
                  />
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                >
                  <label
                    class="text-xl text-dial-blue"
                  >
                    End Date
                  </label>
                  <input
                    class="w-full"
                    name="endDate"
                    placeholder="End Date"
                    type="date"
                    value=""
                  />
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                >
                  <label
                    class="text-xl text-dial-blue"
                  >
                    Project URL
                  </label>
                  <input
                    class="w-full"
                    name="projectUrl"
                    placeholder="Project URL"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="project-product"
                >
                  <label
                    class="text-xl text-dial-blue"
                  >
                    Product
                  </label>
                  <div
                    class=" css-l45kjq-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-2-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="react-select__control react-select__control--menu-is-open css-19jej77-control"
                    >
                      <div
                        class="react-select__value-container css-3tzzl5-ValueContainer"
                      >
                        <div
                          class="react-select__placeholder css-19jynah-placeholder"
                          id="react-select-2-placeholder"
                        >
                          Product
                        </div>
                        <div
                          class="react-select__input-container css-6j8wv5-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="react-select-2-listbox"
                            aria-describedby="react-select-2-placeholder"
                            aria-expanded="true"
                            aria-haspopup="true"
                            aria-owns="react-select-2-listbox"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="react-select__input"
                            id="react-select-2-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-1979yuk-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-1hmmjq6-indicatorContainer"
                        >
                          <svg
                            class="text-2xl"
                            fill="none"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="react-select__menu css-1jtw5r9-menu"
                      id="react-select-2-listbox"
                    >
                      <div
                        class="react-select__menu-list css-4ljt47-MenuList"
                      >
                        <div
                          aria-disabled="false"
                          class="react-select__option react-select__option--is-focused css-llk42x-option"
                          id="react-select-2-option-0"
                          tabindex="-1"
                        >
                          Product 1
                        </div>
                        <div
                          aria-disabled="false"
                          class="react-select__option css-19r0ri3-option"
                          id="react-select-2-option-1"
                          tabindex="-1"
                        >
                          Product 2
                        </div>
                        <div
                          aria-disabled="false"
                          class="react-select__option css-19r0ri3-option"
                          id="react-select-2-option-2"
                          tabindex="-1"
                        >
                          Product 3
                        </div>
                      </div>
                    </div>
                    <input
                      name="product"
                      type="hidden"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="project-organization"
                >
                  <label
                    class="text-xl text-dial-blue"
                  >
                    Organization
                  </label>
                  <div
                    class=" css-l45kjq-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-3-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="react-select__control react-select__control--menu-is-open css-19jej77-control"
                    >
                      <div
                        class="react-select__value-container css-3tzzl5-ValueContainer"
                      >
                        <div
                          class="react-select__placeholder css-19jynah-placeholder"
                          id="react-select-3-placeholder"
                        >
                          Organization
                        </div>
                        <div
                          class="react-select__input-container css-6j8wv5-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="react-select-3-listbox"
                            aria-describedby="react-select-3-placeholder"
                            aria-expanded="true"
                            aria-haspopup="true"
                            aria-owns="react-select-3-listbox"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="react-select__input"
                            id="react-select-3-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-1979yuk-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-1hmmjq6-indicatorContainer"
                        >
                          <svg
                            class="text-2xl"
                            fill="none"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="react-select__menu css-1jtw5r9-menu"
                      id="react-select-3-listbox"
                    >
                      <div
                        class="react-select__menu-list css-4ljt47-MenuList"
                      >
                        <div
                          aria-disabled="false"
                          class="react-select__option react-select__option--is-focused css-llk42x-option"
                          id="react-select-3-option-0"
                          tabindex="-1"
                        >
                          Organization 1
                        </div>
                        <div
                          aria-disabled="false"
                          class="react-select__option css-19r0ri3-option"
                          id="react-select-3-option-1"
                          tabindex="-1"
                        >
                          Organization 2
                        </div>
                      </div>
                    </div>
                    <input
                      name="organization"
                      type="hidden"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="w-full lg:w-1/2"
              >
                <div
                  class="block flex flex-col gap-y-2"
                  data-testid="project-description"
                >
                  <label
                    class="text-xl text-dial-blue required-field"
                  >
                    Description
                  </label>
                  <div
                    class="htmlEditor"
                  >
                    <textarea
                      id="description-editor"
                      style="visibility: hidden;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex flex-wrap text-xl mt-8 gap-3"
            >
              <button
                class="submit-button"
                data-testid="submit-button"
                type="submit"
              >
                Submit Project
              </button>
              <button
                class="cancel-button"
                type="button"
              >
                Cancel
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
